<?xml version="1.0"?>

<package format="3">

  <name>ibvs_demo</name>
  <version>0.0.1</version>

  <description>
    Launch files, tmux configuration and demo utilities for the IBVS project.
  </description>

  <maintainer email="aryan7109singh@gmail.com">
    Aryan Singh
  </maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>ibvs_mpc</exec_depend>
  <exec_depend>ibvs_interfaces</exec_depend>

  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>

  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>