<?xml version="1.0"?>

<package format="3">

  <name>ibvs_mpc</name>
  <version>0.0.0</version>

  <description>
    Image-Based Visual Servoing and MPC package
  </description>

  <maintainer email="aryan7109singh@gmail.com">
    Aryan Singh
  </maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- Vision -->
  <depend>cv_bridge</depend>

  <!-- Custom messages -->
  <depend>ibvs_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>